--- a/hw011maven/pom.xml
+++ b/hw011maven/pom.xml
@@ -19,8 +19,8 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <org.apache.commons.lang3.version>3.8</org.apache.commons.lang3.version>
         <my.variable>42</my.variable>
     </properties>
@@ -75,6 +75,32 @@
                             <mainClass>com.vlamitin.otus.java.hw011maven.main.Main</mainClass>
                         </manifest>
                     </archive>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>com.github.wvengen</groupId>
+                <artifactId>proguard-maven-plugin</artifactId>
+                <version>2.0.14</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals><goal>proguard</goal></goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <obfuscate>true</obfuscate>
+                    <injar>${project.name}-${project.version}-jar-with-dependencies.jar</injar>
+                    <outjar>${project.build.finalName}.min.jar</outjar>
+                    <libs>
+                        <lib>${java.home}/lib/rt.jar</lib>
+                        <lib>${java.home}/lib/jsse.jar</lib>
+                    </libs>
+
+                    <options>
+                        <option>-keep public class com.vlamitin.otus.java.hw011maven.main.Main {public static void main(java.lang.String[]);}</option>
+                        <option>-dontwarn</option>
+                    </options>
                 </configuration>
             </plugin>
 
